<resources>
    <string name="app_name">Start Money Management</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    // activity
    <string name="login">Login</string>
    <string name="register">Register</string>

    // country
    <string name="country">ID</string>

    // homepage
    <string name="home">Beranda</string>
    <string name="reports">Laporan</string>
    <string name="category">Kategori</string>
    <string name="profile">Profil</string>

    // input financial
    <string name="rupiah">Rp</string>
    <string name="note_optional">Tambahkan catatan anda disini (Opsional)</string>

    // report
    <string name="report_list_spend">Daftar Pengeluaran</string>
    <string name="report_list_income">Daftar Pendapatan</string>


    // input category
    <string name="input_title">Masukkan judul disini...</string>
    <string name="input_name">Masukkan nama disini...</string>
    <string name="description_optional">Tambahkan deskripsi anda disini (Opsional)</string>
    <string name="choose_image">Silahkan pilih gambar</string>

    // button
    <string name="save">Simpan</string>
    <string name="oke">Oke, Sip</string>

    <string name="today">Hari Ini</string>

    // type financials
    <string name="spend">Pengeluaran</string>
    <string name="income">Pendapatan</string>

    // status server
    <string name="failed_server_connection">Koneksi Server Bermasalah</string>
    <string name="failed_server_connection_message">Coba sebentar lagi ya, Kami sedang memperbaikinya</string>

    // status network
    <string name="disconnect">Yah, internetnya mati...</string>
    <string name="disconnect_message">Cek koneksi Wi-Fi atau kuota internetmu dan coba lagi ya.</string>

    <string name="check_connection">Yah, koneksi gagal...</string>
    <string name="check_connection_message">Cek koneksi Wi-Fi atau kuota internetmu dan coba lagi ya.</string>

    // status auth
    <string name="password_not_match">Password Tidak Sesuai</string>
    <string name="password_not_match_message">Coba cek passwordmu dan coba lagi ya.</string>
    <string name="email_password_failed">Email atau Password Salah</string>
    <string name="email_password_failed_message">Yah email atau password mu salah, coba cek dan coba lagi ya.</string>

    // status data
    <string name="please_complete_data">Harap isi data dengan lengkap</string>
    <string name="please_complete_data_message">Coba periksa kelengkapan data anda</string>
    <string name="data_not_available">Yah, data belum tersedia</string>
    <string name="data_not_available_message">Silahkan tambahkan data</string>
    <string name="note_empty">Tidak ada catatan</string>


    <string name="data_transaction_not_available">Tidak ada transaksi</string>
    <string name="data_transaction_not_available_message">Ketuk + untuk menambahkan data transaksi anda</string>

    <string name="success">Success</string>
    <string name="failed">Gagal</string>

    // category
    <string name="title_category">Judul Kategori</string>
    <string name="name_category">Nama Kategori</string>
    <string name="description_category">Judul Kategori</string>
    <string name="type_category">Tipe Kategori</string>
    <string name="image_category">Gambar Kategori</string>
    <string name="category_title_input_hint">Masukkan judul kategori...</string>
    <string name="category_description_input_hint">Masukkan deskripsi kategori...</string>

    // profile
    <string name="change_photo_profile">Ganti Foto Profil</string>
    <string name="name_full">Nama Lengkap</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="date_born">Tanggal Lahir</string>
    <string name="password">Password</string>
    <string name="password_konf">Konfirmasi Password</string>
    <string name="email">Email</string>

    <string name="name_full_hint">Nama Lengkap Anda...</string>
    <string name="email_hint">Email Anda...</string>
    <string name="password_hint">Password Anda...</string>
    <string name="password_confirm_hint">Password Konfirmasi Anda...</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>


    // detail
    <string name="note">Catatan</string>
    <string name="date">Tanggal</string>


    <string-array name="month_full_list">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>

    </string-array>

    <string-array name="month_list">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>Mei</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Agu</item>
        <item>Sep</item>
        <item>Okt</item>
        <item>Nov</item>
        <item>Des</item>

    </string-array>

    <string-array name="year_list">
        <item>2010</item>
        <item>2011</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>


    </string-array>

</resources>
