<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_15sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/title_category"
            style="@style/text_hint"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            >

            <EditText
                android:id="@+id/title_category_ed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/category_title_input_hint"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                style="@style/text_edit"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/title_category"
            style="@style/text_hint"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            >

            <EditText
                android:id="@+id/description_category_ed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/category_description_input_hint"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                style="@style/text_edit"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/type_category"
            style="@style/text_hint"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            >

            <RadioButton
                android:id="@+id/type_spend_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/gold"
                android:text="@string/spend"
                style="@style/text_radio_button"/>

            <RadioButton
                android:id="@+id/type_income_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:buttonTint="@color/gold"
                android:text="@string/income"
                style="@style/text_radio_button" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/image_category"
            style="@style/text_hint"
            />

        <ImageView
            android:id="@+id/category_selected_img"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_broken_image"/>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/save_category_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_5sdp"
        android:text="SIMPAN"
        style="@style/btn_primary"
        />

</LinearLayout>