<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Input Data"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/text_black"
                android:fontFamily="@font/semi_bold_opensans"
                android:layout_gravity="center|left"/>

            <ImageView
                android:id="@+id/close_img"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="right|center"
                android:src="@drawable/ic_close_black" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_input_nominal"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_10ssp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/bold_opensans"
                android:text="@string/rupiah"
                android:textColor="@color/text_black_primary"
                android:textSize="@dimen/_20ssp" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nominal_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:backgroundTint="@color/transparant"
                    android:clickable="true"
                    android:fontFamily="@font/bold_opensans"
                    android:hint="0"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/text_black_primary"
                    android:textSize="@dimen/_20ssp" />

                <LinearLayout
                    android:id="@+id/select_date_ll"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/ic_date_gray" />

                    <TextView
                        android:id="@+id/selected_date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular_opensans"
                        android:text="@string/today"
                        android:textColor="@color/text_second"
                        android:textSize="@dimen/_8ssp"

                        />

                </LinearLayout>


            </FrameLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_edit_text">

            <EditText
                android:id="@+id/note_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:backgroundTint="@color/transparant"
                android:clickable="false"
                android:fontFamily="@font/regular_opensans"
                android:gravity="left|top"
                android:hint="@string/note_optional"
                android:imeOptions="actionDone"
                android:maxLength="50"
                android:textColor="@color/text_black_primary"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/note_length_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/regular_opensans"
                android:text="0/50"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/_10ssp" />

        </FrameLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/corner_green"
            android:fontFamily="@font/semi_bold_opensans"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/text_white"
            android:textSize="@dimen/_14sdp" />


    </LinearLayout>


</LinearLayout>