<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10sdp">



                <ImageView
                    android:id="@+id/close_img"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="right|center"
                    android:src="@drawable/ic_close_black" />

            </FrameLayout>

            <ImageView
                android:id="@+id/assets_category_img"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@mipmap/logo_app"
                android:layout_gravity="center"/>

            <TextView
                style="@style/text_edit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name_category"
                android:layout_margin="@dimen/_10sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/border_edit_text"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/_10ssp"
                    android:paddingRight="@dimen/_10sdp">


                        <EditText
                            android:id="@+id/name_category_ed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/transparant"
                            android:clickable="true"
                            android:fontFamily="@font/regular_opensans"
                            android:hint="@string/input_name"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/text_black_primary"
                            android:textSize="@dimen/_14ssp" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_blue"
                android:fontFamily="@font/semi_bold_opensans"
                android:paddingLeft="@dimen/_40sdp"
                android:paddingRight="@dimen/_40sdp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>